--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
      <meta charset="utf-8">
      <title>My test page</title>
-     <link href="styles/style.css" rel="stylesheet">
+     <link href="Styles/style.css" rel="stylesheet">
 </head>
 
 
